...
import br.com.usinasantafe.cav.presenter.theme.MsgErrors
import br.com.usinasantafe.cav.utils.UiStatusState

const val TAG_VEHICLE_OWN_EDIT_BUTTON = "tag_vehicle_own_edit_button"
const val TAG_VEHICLE_SEC_OWN_EDIT_BUTTON = "tag_vehicle_sec_own_edit_button"
const val TAG_DRIVER_OWN_EDIT_BUTTON = "tag_driver_own_edit_button"
const val TAG_PASSENGERS_OWN_EDIT_BUTTON = "tag_passengers_own_edit_button"

@Composable
fun VehicleOwnDataScreen(
    viewModel: VehicleOwnDataViewModel = hiltViewModel(),
    onNavDataEquip: () -> Unit,
    onNavDataColab: () -> Unit,
...
