...
import br.com.usinasantafe.cav.presenter.theme.CAVTheme
import br.com.usinasantafe.cav.presenter.theme.MsgErrors
import br.com.usinasantafe.cav.presenter.theme.TextButtonDesign
import br.com.usinasantafe.cav.utils.UiStatusState

const val TAG_UNHARMED_RADIO_BUTTON = "tag_unharmed_radio_button"
const val TAG_INJURED_RADIO_BUTTON = "tag_injured_radio_button"
const val TAG_DEAD_RADIO_BUTTON = "tag_dead_radio_button"


@Composable
fun StateScreen(
    viewModel: StateViewModel = hiltViewModel(),
...
